[tool.poetry]
name = "KubeSandbox"
version = "0.5.0"
description = "KubeSandbox is an open-source tool designed to simplify the process of creating and managing a Kubernetes cluster on a developer's machine. Leveraging Docker, k3d, kubectl, and Helm, this tool provides an easy and quick way to set up a highly customizable and fully functional Kubernetes cluster for learning, testing, and experimentation."
authors = ["Prakhar Malviya <prakhar1.0.0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
questionary = "^2.0.1"
pydantic = "^2.7.4"
mermaid-py = "^0.5.0"
rich = "^13.7.1"
httpx = "^0.27.0"
pyinstaller = "^6.7.0"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.27.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
